--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "Paul Cwik",
+  "author": "Kevin Miller",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
